# hisabvani

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
backend/: main.py  routes.py  routes_bills.py  routes_compute.py  routes_video.py  routes_voice_expense.py
backend/agents/: compute_agent.py  llm_agent.py  speech_agent.py  translation_agent.py  video_agent.py  vision_agent.py
backend/models/: database.py
backend/tests/: test_bill_upload.py  test_calculator.py  test_translation_agent.py  test_video_routes.py  test_voice_query.py
backend/video_templates/: DESIGN.md  expense_report.html  fetch_audio.mjs
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/health/: route.ts
frontend/app/components/: product-header.tsx  service-notice.tsx
frontend/app/expense/: page.tsx
frontend/app/health/: route.ts
frontend/app/upload/: page.tsx
frontend/app/video/: page.tsx
frontend/app/voice/: page.tsx
frontend/lib/: api.ts  household-ledger.ts
